--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,15 @@
 
     <build>
         <plugins>
+            <plugin>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-maven-plugin</artifactId>
+    <version>0.0.8</version>
+    <configuration>
+        <mainClass>com.jobassistant.Main</mainClass>
+    </configuration>
+</plugin>
+
             <!-- Плагин для запуска JavaFX -->
             <plugin>
                 <groupId>org.openjfx</groupId>
